objects/LicenseUpgradeRequest__e.object
<CustomObject>
    <description>This is a platforming event to support license upgrades</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>License Upgrade Request</label>
    <pluralLabel>License Upgrade Requests</pluralLabel>
</CustomObject>